Bug ID. The bug IDs relate to sourceforge IDs.. You can query the
related bug description with the following URL:

 http://sourceforge.net/bugs/?func=detailbug&bug_id=XXXXX&group_id=6663

Where you should replace XXXXX with a bug-id.
====================================================================

0.74: please submit patches for this section with actual code/doc
      patches!

* pam_access - fixed the non-default config file option (Bug 127561 -
  agmorgan)
* pam.8 manual page clarified with respect to the default location for
  finding modules, also added some text describing the [...] control
  syntax. (Bug 127625 - agmorgan)
* md5.h ia64 fixes for pam_unix and pam_pwdb (Bug 127700 - agmorgan)
* removed requirement for c++ from the configure{.in,} files (Bug
  128298 - agmorgan)
* removed subdirectories from man page redirections (124396 - baggins)
* per David Lee, fixed non-POSIX shell command in modules/pam_filter/Makefile
  (Bug 126440 - vorlon)
* modify format of pam_unix log messages to include service name
  (Bug 126423 - vorlon)
* prevent pam_unix from logging unknown usernames (Bug 126431 - vorlon)
* changed format of pam_unix 'authentication failure' log messages to make
  them clearer and more consistent (Bug 126036 - vorlon)
* improved portability of pam_unix by eliminating Linux-specific utmp
  defines in PAM_getlogin() (Bug 125704 - vorlon)
* removed static variables from pam_tally (Bug 117434 - agmorgan)
* added copyright message to pam_access module from original logdaemon
  sources (Bug 125022 - agmorgan)
* configure.in - removed the GCC -Wtraditional flag (Bug 124923 - agmorgan)
* pam_mail - use PAM_PATH_MAILDIR as the location of mail spool
  (Bug 124397 - baggins)
* _pam_aconf.h.in, configure.in - added PAM_PATH_MAILDIR set via
  --with-mailspool=dir option (default is _PAM_MAILDIR if defined
  in paths.h otherwise /var/spool/mail (Bug 124397 - baggins)
* removed unnecessary CVS Log tags from all over the source
  (Bug 124391 - baggins)