@@ -12,7 +12,13 @@ int pam_open_session(pam_handle_t *pamh, int flags)
 {
     D(("called"));
 
-    IF_NO_PAMH("pam_open_session",pamh,PAM_SYSTEM_ERR);
+    IF_NO_PAMH("pam_open_session", pamh, PAM_SYSTEM_ERR);
+
+    if (__PAM_FROM_MODULE(pamh)) {
+	D(("called from module!?"));
+	return PAM_SYSTEM_ERR;
+    }
+
     return _pam_dispatch(pamh, flags, PAM_OPEN_SESSION);
 }
 
@@ -20,6 +26,12 @@ int pam_close_session(pam_handle_t *pamh, int flags)
 {
     D(("called"));
 
-    IF_NO_PAMH("pam_close_session",pamh,PAM_SYSTEM_ERR);
+    IF_NO_PAMH("pam_close_session", pamh, PAM_SYSTEM_ERR);
+
+    if (__PAM_FROM_MODULE(pamh)) {
+	D(("called from module!?"));
+	return PAM_SYSTEM_ERR;
+    }
+
     return _pam_dispatch(pamh, flags, PAM_CLOSE_SESSION);
 }
